# fast_mineru

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  scratch_mfr_preprobe.py  tasks.py
engine_build/: _env.py  build_all.py  build_engines.py  export_decoder_init_onnx.py  export_decoder_onnx.py  export_det_rec_onnx.py  export_encoder_onnx.py
fast_mineru/: __init__.py  _quiet.py  _stagetimer.py  cli.py  config.py  console.py  mineru_backend.py  pipeline.py  streaming.py
fast_mineru/csrc/: __init__.py  _fast_mineru_core.pyi  binding.cpp
fast_mineru/csrc/include/: mfr_preprocess.h  ocr_preprocess.h
fast_mineru/csrc/kernels/: mfr_preprocess.cu  ocr_preprocess.cu
fast_mineru/engines/: __init__.py  crnn.py  dbnet.py  mfr_decoder.py  mfr_encoder.py  trt_base.py
fast_mineru/models/: __init__.py  fast_batch_analyze.py  mfr.py  ocr.py
tests/: test_smoke.py
tools/: ab_benchmark.py  cmp_all_latex.py
