[project]
name = "fast_mineru"
version = "0.1.0"
description = "MinerU 推理管线的原生加速封装：TensorRT MFR decoder(全程GPU零拷贝) + CUDA 预处理算子，无 monkey-patch，一个类一键推理"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "numpy>=1.26",
    "pybind11>=3.0",
    "pybind11-stubgen<1",
    "torch>=2.6,<3",
    "rich>=13.0",
    "tensorrt==10.12.0.36",
    "pillow>=11.0.0",
    # MinerU pipeline 后端(pp_formulanet/OCR/layout) —— 依赖 PyPI 原版，钉死 3.4.1 保证模型架构稳定。
    # 注：Fast 只依赖原版就有的接口(generate_export/build_mfr_batch_groups/run_*_inference/
    # AtomModelSingleton 等)；魔改版的 2 处解析增强已移植为 Fast 自己的注入层(models/mineru_enhance.py)。
    "mineru[pipeline]==3.4.1",
    # mineru 3.4.1 的 pdf_classify 使用 PdfImage.get_pos()(pypdfium2 4.x API)；5.x 已删除该方法，
    # 导致 classify() 对所有文本型 PDF 抛异常并兜底为 'ocr' → 每篇文本 PDF 都被迫全页 OCR
    # (1213 行 rec/14页)，这是"速度没有明显提升"的最大单一原因。钉 <5 恢复正确 auto 分类。
    "pypdfium2>=4.30.0,<5",
    "six>=1.17.0",
    "onnxscript>=0.7.1",
]

# dev：构建 wheel(uv build + retag) / 生成 .pyi 存根 / 跑基准 / 构建 TRT 引擎。
[dependency-groups]
dev = [
    "invoke>=3.0",
    "wheel>=0.45",
    "pytest>=8.0",
    # 引擎构建期依赖：torch.onnx.export 需要 onnx；导出脚本数值自检用 onnxruntime(运行时已由 mineru 传递依赖提供)。
    "onnx>=1.18.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["fast_mineru*"]
exclude = ["build*", "engines_bin*", "tests*", "third_party*"]

# 打包编译产物(.pyd/.dll) + C 头文件(下游二次编译用)。
[tool.setuptools.package-data]
fast_mineru = [
    "**/*.pyd", "**/*.dll",
    "**/*.so", "**/*.dylib",
    "**/include/**",
    "**/*.pyi",
]

[project.scripts]
fast-mineru = "fast_mineru.cli:main"

# torch 从 PyTorch cu128 索引拉取(默认 PyPI 是 +cpu 轮子，GPU 编排不可用)。
# mineru 走 PyPI 原版(见 dependencies)，不再依赖本地 MinerU 源码树。
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
